# rust-fitting-curvature

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  all-experiments.sh  analyze_hyperparams.py  build.sh  pyproject.toml  results.jsonl  results_k-0.1.jsonl  results_k-0.5.jsonl  results_k-1.0.jsonl  results_k-2.0.jsonl  results_k0.0.jsonl  results_k0.1.jsonl  results_k0.5.jsonl  results_k1.0.jsonl  results_k2.0.jsonl
.github/workflows/: ci.yml
config/: params.json
crates/core/: Cargo.toml
crates/core/src/: affinities.rs  config.rs  curvature_detection.rs  data.rs  embedding.rs  kernels.rs  kl_divergence.rs  lib.rs  manifolds.rs  matrices.rs  metrics.rs  optimizer.rs  scaling_loss.rs  synthetic_data.rs  visualisation.rs
crates/core/tests/: test_affinities.rs  test_curvature_detection.rs  test_gradients.rs  test_high_dim.rs  test_integration.rs  test_kernels.rs  test_manifolds.rs  test_metrics.rs  test_synthetic.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: data.rs  evaluate.rs  gp.rs  main.rs  metrics.rs  search_space.rs  tpe.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs  plot.rs
scripts/: download_mnist.sh  generate_pbmc_pca.py  generate_wordnet_mammals.py
www/: dataLoaders.js  index.html  index.js  landscape.html  landscape.js  package-lock.json  package.json  style.css  vite.config.js
www/public/data/: .gitignore
www/public/data/pbmc/: pbmc_pca.tsv
www/public/data/wordnet/: mammals_edges.tsv  mammals_labels.tsv  mammals_names.tsv
www/tests/: dataLoaders.test.js
