[package]
name = "fitting-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
fitting-core = { path = "../core" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Document",
    "Window",
    "Element",
    "console",
] }
js-sys = "0.3"
plotters = "0.3"
plotters-canvas = "0.3"
lol_alloc = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

